--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@gsap/react": "^2.1.2",
+    "@sanity/image-url": "^2.0.3",
+    "@sanity/vision": "^5.9.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.34.0",
     "gsap": "^3.14.2",
@@ -18,8 +21,10 @@
     "lightningcss-win32-x64-msvc": "^1.31.1",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
+    "next-sanity": "^12.1.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "sanity": "^5.9.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
